--- a/index.html
+++ b/index.html
@@ -104,19 +104,23 @@
         <h4 class="h4-projetos">Projetos</h4>
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-lg-4 my-2">
-                <div class="card card-projetos text-center">
-                    <h5 class="projetos-text">Projeto 1</h5>
-                    <h4 class="projetos-subtitulo">Em breve</h4>
-                </div>
+                <a href="https://projeto-fintech-front.vercel.app/" target="_blank">
+                    <div class="card card-projetos-fintech text-center">
+                        <h5 class="projetos-text">Projeto 1</h5>
+                        <h4 class="projetos-subtitulo">Fintech</h4>
+                    </div>
+                </a>
             </div>
             <div class="col-lg-4 my-2">
-                <div class="card card-projetos text-center">
-                    <h5 class="projetos-text">Projeto 2</h5>
-                    <h4 class="projetos-subtitulo">Em breve</h4>
-                </div>
+                <a href="https://projeto-ifood-front.vercel.app/" target="_blank">
+                    <div class="card card-projetos-ifood text-center">
+                        <h5 class="projetos-text">Projeto 2</h5>
+                        <h4 class="projetos-subtitulo">iFood Challenge</h4>
+                    </div>
+                </a>
             </div>
             <div class="col-lg-4 mt-2">
-                <div class="card card-projetos text-center">
+                <div class="card card-projetos-breve text-center">
                     <h5 class="projetos-text">Projeto 3</h5>
                     <h4 class="projetos-subtitulo">Em breve</h4>
                 </div>
@@ -125,7 +129,7 @@
     </section>
 
     <footer class="container contato" id="contato">
-        <a href="https://www.instagram.com/otaviogoulartii/" target="_blank"><i class="fa-brands fa-instagram icon-footer mx-2"></i></a>
+        <a href="https://www.instagram.com/ibrowbs/" target="_blank"><i class="fa-brands fa-instagram icon-footer mx-2"></i></a>
         <a href="https://www.linkedin.com/in/otaviogoularti/" target="_blank"><i class="fa-brands fa-linkedin icon-footer mx-2"></i></a>
         <a href="https://github.com/goularti10" target="_blank"><i class="fa-brands fa-github icon-footer mx-2"></i></a>
         <a href="https://www.youtube.com/channel/UCzKnGjC27hmXMgKgQXqG2pw" target="_blank"><i class="fa-brands fa-youtube icon-footer"></i></a>
