atualizando os conhecimentos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="container">
               <a class="navbar-brand logo-text" href="#">
                 <img src="assets/images/logotipo.png" alt="Logotipo do Portfólio" width="36" height="30" class="d-inline-block align-text-top">
-                Portfólio
+                iBrowbs
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars-staggered"></i>
@@ -49,8 +49,8 @@
                 <h1 class="my-title my-4">Otavio Goularti</h1>
                 <p class="my-subtitle mb-5">Desenvolvedor Front-End</p>
                 <h3 class="sobre-mim-text my-4">Sobre mim</h3>
-                <p class="paragrafo-1">Sou formado em Informática para Internet, onde desenvolvi sistemas com HTML, CSS, JavaScript, Node.js e MYSQL. Além disso, tenho conhecimentos em boas práticas de UX/UI Design, que é fundamental para uma melhor experiência dos usuários. Atualmente, estudo Análise e Desenvolvimento de Sistemas, na FIAP.</p>
-                <p class="paragrafo-2">Portanto, fico à disposição para participar de processos seletivos na área de desenvolvimento web, já que tenho interesse em adquirir experiência e aprimorar meus conhecimentos nesse setor do mercado de trabalho.</p>
+                <p class="paragrafo-1">Sou técnico em Informática para Internet, onde desenvolvi sistemas com HTML, CSS, JavaScript, Node.js e MYSQL. Além disso, tenho conhecimentos em boas práticas de UX/UI Design, que é fundamental para uma melhor experiência dos usuários. Atualmente, estudo Análise e Desenvolvimento de Sistemas, na FIAP.</p>
+                <p class="paragrafo-2">Portanto, fico à disposição para participar de processos seletivos na área de desenvolvimento web, já que tenho interesse em estagiar e adquirir novas experiências, além de aprimorar meus conhecimentos nessa área.</p>
             </div>    
             <div class="col-lg-6">
                 <img src="assets/images/img-sobre.png" alt="Minha foto" class="img-fluid">
@@ -97,6 +97,24 @@
                     <h3>GitHub</h3>
                 </div>
             </div>
+            <div class="col-lg-4 my-2">
+                <div class="card card-conhecimentos text-center">
+                    <i class="fa-brands fa-python icon"></i>
+                    <h3>Python</h3>
+                </div>
+            </div>
+            <div class="col-lg-4 my-2">
+                <div class="card card-conhecimentos text-center">
+                    <i class="fa-brands fa-java icon"></i>
+                    <h3>Java</h3>
+                </div>
+            </div>
+            <div class="col-lg-4 my-2">
+                <div class="card card-conhecimentos text-center">
+                    <i class="fa-solid fa-database icon"></i>
+                    <h3>SQL</h3>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -122,17 +140,17 @@
             <div class="col-lg-4 mt-2">
                 <div class="card card-projetos-breve text-center">
                     <h5 class="projetos-text">Projeto 3</h5>
-                    <h4 class="projetos-subtitulo">Em breve</h4>
+                    <h4 class="projetos-subtitulo">Em desenvolvimento</h4>
                 </div>
             </div>
         </div>    
     </section>
 
     <footer class="container contato" id="contato">
+        <a href="wa.me/5511984148688" target="_blank"><i class="fa-brands fa-whatsapp icon-footer"></i></a>
         <a href="https://www.instagram.com/ibrowbs/" target="_blank"><i class="fa-brands fa-instagram icon-footer mx-2"></i></a>
         <a href="https://www.linkedin.com/in/otaviogoularti/" target="_blank"><i class="fa-brands fa-linkedin icon-footer mx-2"></i></a>
         <a href="https://github.com/goularti10" target="_blank"><i class="fa-brands fa-github icon-footer mx-2"></i></a>
-        <a href="https://www.youtube.com/channel/UCzKnGjC27hmXMgKgQXqG2pw" target="_blank"><i class="fa-brands fa-youtube icon-footer"></i></a>
     </footer>          
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
