arrumando os contatos

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </section>
 
     <footer class="container contato" id="contato">
-        <a href="wa.me/5511984148688" target="_blank"><i class="fa-brands fa-whatsapp icon-footer"></i></a>
+        <a href="https://www.youtube.com/@ibrowbs" target="_blank"><i class="fa-brands fa-youtube icon-footer"></i></a>
         <a href="https://www.instagram.com/ibrowbs/" target="_blank"><i class="fa-brands fa-instagram icon-footer mx-2"></i></a>
         <a href="https://www.linkedin.com/in/otaviogoularti/" target="_blank"><i class="fa-brands fa-linkedin icon-footer mx-2"></i></a>
         <a href="https://github.com/goularti10" target="_blank"><i class="fa-brands fa-github icon-footer mx-2"></i></a>
